cambie el titulo del background

--- a/background.html
+++ b/background.html
@@ -1,7 +1,7 @@
 <!doctype html>
  <html>
  <head>
- <title>Background Page</title>
+ <title>Background Page extension</title>
  </head>
  <body>
  </body>
